# endpoint-manager

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE.md  CLIENT_INTEGRATION.md  SPEC.md  TEST_REPORT.md  TEST_STRATEGY.md
mcp/: package-lock.json  package.json  server.ts  tsconfig.json
scripts/: launch.sh  stop.sh
src/: EndpointManager.ts  EndpointStore.ts  NetworkScanner.ts  WsServer.ts  index.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/gui/: index.html
test/e2e/: mcp-tools.test.ts
test/integration/: ws-protocol.test.ts
test/unit/: build-node.test.ts  resolve.test.ts  store.test.ts
